tests/const_params/const_params.exp
Error: test.js:17
 17:   x = "hey"; // error, const param cannot be reassigned
       ^ x. const param cannot be reassigned
 16: function cannot_reassign(x: string) {
                              ^^^^^^^^^ const param x


Found 1 error
